ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
name: tracklify-ingress
spec:
ingressClassName: nginx
rules:

* host: tracklify.local
  http:
  paths:

  * path: /
    pathType: Prefix
    backend:
    service:
    name: frontend-service
    port:
    number: 3000
  * path: /api
    pathType: Prefix
    backend:
    service:
    name: tracklify-backend-service
    port:
    number: 5000
